# crew-powered-research

./: .env.example  README.md  pyproject.toml
src/startup_idea_research/: crew.py  main.py
src/startup_idea_research/config/: agents.yaml
