[project]
name = "startup_idea_research"
version = "0.1.0"
description = "startup_idea_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "tavily-python",
]

[project.scripts]
startup_idea_research = "startup_idea_research.main:run"
run_crew = "startup_idea_research.main:run"
train = "startup_idea_research.main:train"
replay = "startup_idea_research.main:replay"
test = "startup_idea_research.main:test"
run_with_trigger = "startup_idea_research.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
